<fix>: fixed css to move modal further down that page, so it is not hidden by the navbar

--- a/frontend/src/components/search.css
+++ b/frontend/src/components/search.css
@@ -1,8 +1,9 @@
 .searchModal{
     position: absolute;
     background-color: white;
-    Height: 80%;
+    Height: 60%;
     Width: 70%; 
     margin-left: 15%;
-    margin-top: 5%;
+    margin-top: 10%;
+    z-index: 100000!important;
 }
